--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webdeveloper Portfolio</title>
+    <!-- CSS File Link -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- Google Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" href="assets/icons/favicon.svg" type="image/x-icon">
+    <!-- Font Awesome Link -->
+    <script src="https://kit.fontawesome.com/184cf89238.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!-- Header Section start -->
+    <header>
+    </header>
+    <!-- Header Section end -->
+    <!-- Main Section Start -->
+    <main>
+    </main>
+    <!-- Main Section end -->
+    <!-- Footer Section start-->
+    <footer>
+
+    </footer>
+    <!-- Footer Section end -->
 </body>
+
 </html>
