nav section edited

--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webdeveloper Portfolio</title>
-    <!-- CSS File Link -->
-    <link rel="stylesheet" href="styles/style.css">
     <!-- Google Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <!-- Favicon Link -->
     <link rel="shortcut icon" href="assets/icons/favicon.svg" type="image/x-icon">
     <!-- Font Awesome Link -->
-    <script src="https://kit.fontawesome.com/184cf89238.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- CSS File Link -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <!-- Header Section start -->
     <header>
+        <!-- Navbar start -->
+        <nav>
+            <h3 class="nav-title">MA<span class="color-primary">R</span>Y</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+        <!-- Navbar End -->
     </header>
     <!-- Header Section end -->
     <!-- Main Section Start -->
